Commit:  1. Splash screen activity and layout file.  2. Facts list activity to display list of facts and its layout file.  3. Facts list adapter class and list item layout file.  4. Image resources include      a. Launcher icons.      b. Splash screen badge image.      c. Fact list image view place holder image. 5. AndroidManifest file. 6. build.gradle. 7. BaseActivity abstract class for activities in application. 8. FactListActivity unit test class with facts ListView and refresh functionality test cases.

--- a/TelstraAndroidTest/app/src/main/res/values/styles.xml
+++ b/TelstraAndroidTest/app/src/main/res/values/styles.xml
@@ -5,4 +5,18 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <!-- Splash activity theme. -->
+    <style name="ThemeNoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
+    </style>
+
+    <!-- Fact list item title theme. -->
+    <style name="TitleStyle" parent="Base.TextAppearance.AppCompat.Headline">
+        <item name="android:textColor">@android:color/holo_blue_bright</item>
+    </style>
+
+    <!-- Fact list item description theme. -->
+    <style name="DescriptionStyle" parent="Base.TextAppearance.AppCompat.Small">
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
 </resources>
